@@ -4,10 +4,13 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.golfstream.project.entity.Employee;
 import ru.golfstream.project.entity.TypeEmployee;
+import ru.golfstream.project.entity.User;
 import ru.golfstream.project.exception.exceptions.common.NotFoundException;
 import ru.golfstream.project.repos.EmployeeRepo;
 import ru.golfstream.project.repos.TypeEmployeeRepo;
-import ru.golfstream.project.rest.dto.response.EmployeeDto;
+import ru.golfstream.project.rest.dto.mapper.EmployeeMapper;
+import ru.golfstream.project.rest.dto.mapper.UserMapper;
+import ru.golfstream.project.rest.dto.response.EmployeeResponse;
 import ru.golfstream.project.rest.dto.request.EmployeeRequest;
 import ru.golfstream.project.service.EmployeeService;
 
@@ -20,85 +23,52 @@ import java.util.stream.Collectors;
 public class EmployeeServiceImpl implements EmployeeService {
     private final EmployeeRepo employeeRepo;
     private final TypeEmployeeRepo typeEmployeeRepo;
+    private final EmployeeMapper employeeMapper;
 
     @Override
-    public EmployeeDto findById(Long id) {
-        Employee employee = proofEmployeeExist(id);
-        return buildEmployeeDto(employee);
+    public EmployeeResponse getById(Long id) {
+        Employee employee = checkExistAndGetEmployeeById(id);
+        return employeeMapper.toResponse(employee);
     }
 
     @Override
-    public List<EmployeeDto> findAll() {
+    public List<EmployeeResponse> getAll() {
         List<Employee> employees = employeeRepo.findAll();
         return employees.stream()
-                .map(this::buildEmployeeDto)
-                .collect(Collectors.toList());
+                .map(employeeMapper::toResponse)
+                .toList();
     }
 
     @Override
     public Double getSalary(Long id) {
-        Employee employee = proofEmployeeExist(id);
+        Employee employee = checkExistAndGetEmployeeById(id);
         return employee.getType().getRate() * employee.getOpeningHours();
     }
 
     @Override
-    public Long add(EmployeeRequest request) {
-        Optional<TypeEmployee> typeEmployeeFromBd = typeEmployeeRepo.findById(request.getTypeId());
-        if(typeEmployeeFromBd.isEmpty()){
-            throw new NotFoundException("Нет типа работника с ID = " + request.getTypeId() + "!");
-        }
-        Employee employee = new Employee();
-        employee.setName(request.getName());
-        employee.setSurname(request.getSurname());
-        employee.setSecondname(request.getSecondName());
-        employee.setCountry(request.getCountry());
-        employee.setOpeningHours(request.getOpeningHours());
-        employee.setType(typeEmployeeFromBd.get());
-
+    public Long post(EmployeeRequest request) {
+        Employee employee = employeeMapper.toModel(request);
         employeeRepo.saveAndFlush(employee);
         return employee.getId();
     }
 
     @Override
-    public EmployeeDto delete(Long id) {
-        Employee employee = proofEmployeeExist(id);
-        employeeRepo.delete(employee);
-        return buildEmployeeDto(employee);
+    public void delete(Long id) {
+        Optional<Employee> employee = employeeRepo.findById(id);
+        employee.ifPresent(employeeRepo::delete);
     }
 
     @Override
-    public EmployeeDto update(Long id, EmployeeRequest request) {
-        Employee employee = proofEmployeeExist(id);
-        Optional<TypeEmployee> typeEmployeeFromBd = typeEmployeeRepo.findById(id);
-        if(typeEmployeeFromBd.isEmpty()){
-            throw new NotFoundException("Нет типа работника с ID = " + id + "!");
-        }
-
-        employee.setName(request.getName());
-        employee.setSurname(request.getSurname());
-        employee.setSecondname(request.getSecondName());
-        employee.setCountry(request.getCountry());
-        employee.setOpeningHours(request.getOpeningHours());
-        employee.setType(typeEmployeeFromBd.get());
-
-        return buildEmployeeDto(employee);
+    public EmployeeResponse edit(Long id, EmployeeRequest request) {
+        Employee employee = checkExistAndGetEmployeeById(id);
+        employee = employeeMapper.toModel(request);
+        employeeRepo.save(employee);
+        return employeeMapper.toResponse(employee);
     }
 
-    protected Employee proofEmployeeExist(Long id){
-        Optional<Employee> employeeFromDb = employeeRepo.findById(id);
-        if(employeeFromDb.isEmpty()){
-            throw new NotFoundException("Нет работника с ID = " + id + "!");
-        }
-        return employeeFromDb.get();
-    }
-
-    protected EmployeeDto buildEmployeeDto(Employee employee){
-        return EmployeeDto.builder()
-                .name(employee.getName())
-                .surname(employee.getSurname())
-                .secondName(employee.getSecondname())
-                .country(employee.getCountry())
-                .openingHours(employee.getOpeningHours())
-                .build();
+    private Employee checkExistAndGetEmployeeById(Long id){
+        Optional<Employee> employee = employeeRepo.findByIdWithRoute(id);
+        if(employee.isEmpty()) throw new NotFoundException("Not found EMPLOYEE with id: " + id + "!");
+        return employee.get();
     }
 }
